--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,18 @@ body > section,
   background-size: cover;
 }
 
+.carousel .carousel-item {
+  height: 500px;
+}
+
+.carousel-item img {
+    position: absolute;
+    object-fit:cover;
+    top: 0;
+    left: 0;
+    min-height: 500px;
+}
+
 .carousel-caption {
   top: 50%;
 }
