--- a/css/main.css
+++ b/css/main.css
@@ -183,15 +183,16 @@ body > section,
 	padding: 0;
 }
 
-.carousel .item {
-  height: 300px;
+#slider .carousel .item {
+  height: 500px;
 }
 
 .item img {
     position: absolute;
+    object-fit:cover;
     top: 0;
     left: 0;
-    min-height: 300px;
+    min-height: 500px;
 }
 
 .carousel-caption {
