--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 /* =================================== */
 /*	Basic Style 
 /* =================================== */
@@ -23,7 +22,7 @@ figure, p {
 
 a {
     color: #fff;
-	
+
     -webkit-transition: all .3s ease-in 0s;
        -moz-transition: all .3s ease-in 0s;
         -ms-transition: all .3s ease-in 0s;
@@ -55,11 +54,11 @@ h4, h5, h6 {
     content: " ";
     display: table;
 }
- 
+
 .clear:after {
    clear: both;
 }
- 
+
 .clear {
    *zoom: 1;
 }
@@ -144,7 +143,7 @@ body > section,
   background-color: rgba(16, 22, 54, 0.2);
   border: 0 none;
   margin: 0;
-  
+
     -webkit-transition: background-color 800ms linear;
        -moz-transition: background-color 800ms linear;
 	    -ms-transition: background-color 800ms linear;
@@ -183,16 +182,8 @@ body > section,
 	padding: 0;
 }
 
-#slider .carousel .item {
-  height: 500px;
-}
-
-.item img {
-    position: absolute;
-    object-fit:cover;
-    top: 0;
-    left: 0;
-    min-height: 500px;
+#slider .carousel-inner .item {
+  background-size: cover;
 }
 
 .carousel-caption {
@@ -388,15 +379,15 @@ top: -8px;
 	width: 100%;
 	height: 100%;
 	color: #fff;
-	
+
 	opacity: 0;
 	filter: alpha(opacity=0);
-	
+
 	-webkit-transition: all 450ms ease-out 0s;	
 	   -moz-transition: all 450ms ease-out 0s;
 		 -o-transition: all 450ms ease-out 0s;
 		    transition: all 450ms ease-out 0s;
-		  
+
 	-webkit-transform: rotateY(180deg) scale(0.5,0.5);
 	   -moz-transform: rotateY(180deg) scale(0.5,0.5);
 		-ms-transform: rotateY(180deg) scale(0.5,0.5);
@@ -407,7 +398,7 @@ top: -8px;
 .work-item:hover .overlay {
 	opacity: 1;
 	filter: alpha(opacity=100);
-	
+
 	-webkit-transform: rotateY(0deg) scale(1,1);
 	   -moz-transform: rotateY(0deg) scale(1,1);
 		-ms-transform: rotateY(0deg) scale(1,1);
@@ -476,7 +467,7 @@ top: -8px;
 	cursor: pointer;
 	opacity: 1;
 	filter: alpha(opacity=100);
-	
+
 	-webkit-transform: rotateY(0deg) scale(1,1);
 	   -moz-transform: rotateY(0deg) scale(1,1);
 		-ms-transform: rotateY(0deg) scale(1,1);
@@ -731,4 +722,4 @@ label.error {
   position: fixed;
   right: 25px;
   z-index: 9;
-}
+} 
