--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 /* =================================== */
 
 body {
-    background-color: #fff;
+    background-color: #f0f;
     font-family: 'Open Sans', sans-serif;
     line-height: 21px;
 	font-size: 13px;
