--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 /* =================================== */
 
 body {
-    background-color: #5D6D7E;
+    background-color: #85929E;
     font-family: 'Open Sans', sans-serif;
     line-height: 21px;
 	font-size: 13px;
